@@ -3,18 +3,49 @@ import os
 import shutil
 import tempfile
 
+from distutils.log import DEBUG, INFO, WARN, ERROR, FATAL
 from distutils import log
 from distutils.dist import Distribution
+from distutils.cmd import Command
 
 class LoggingSilencer(object):
 
     def setUp(self):
         super(LoggingSilencer, self).setUp()
         self.threshold = log.set_threshold(log.FATAL)
+        # catching warnings
+        # when log will be replaced by logging
+        # we won't need such monkey-patch anymore
+        self._old_log = log.Log._log
+        log.Log._log = self._log
+        self.logs = []
+        self._old_warn = Command.warn
+        Command.warn = self._warn
 
     def tearDown(self):
         log.set_threshold(self.threshold)
+        log.Log._log = self._old_log
+        Command.warn = self._old_warn
         super(LoggingSilencer, self).tearDown()
+
+    def _warn(self, msg):
+        self.logs.append(('', msg, ''))
+
+    def _log(self, level, msg, args):
+        if level not in (DEBUG, INFO, WARN, ERROR, FATAL):
+            raise ValueError('%s wrong log level' % str(level))
+        self.logs.append((level, msg, args))
+
+    def get_logs(self, *levels):
+        def _format(msg, args):
+            if len(args) == 0:
+                return msg
+            return msg % args
+        return [_format(msg, args) for level, msg, args
+                in self.logs if level in levels]
+
+    def clear_logs(self):
+        self.logs = []
 
 
 class TempdirManager(object):
