@@ -48,6 +48,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7071: byte-compilation in Distutils is now done with respect to
+  sys.dont_write_bytecode.
+
 - Issue #7092: Remove py3k warning when importing cPickle.  2to3 handles
   renaming of `cPickle` to `pickle`.  The warning was annoying since there's
   no alternative to cPickle if you care about performance.  Patch by Florent
